changed pom dependencies to use spring boot and vaadin, commenred out all javafx realted code